--- a/dracula.css
+++ b/dracula.css
@@ -11,7 +11,7 @@
   --purple: #bd93f9;
   --red: #ff5555;
   --yellow: #f1fa8c;
-  --font: "PragmataPro"; /*"FiraCode Nerd Font Mono";*/
+  --font: monospace; /*"FiraCode Nerd Font Mono";*/
 
   --tridactyl-fg: var(--fg);
   --tridactyl-bg: var(--bg);
@@ -40,7 +40,7 @@
 
 #command-line-holder {
   order: 1;
-  border: 2px solid var(--purple);
+  border: 1px solid var(--purple); /*2px solid var(--purple);*/
   background: var(--tridactyl-bg);
 }
 
